--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue-axios": "^3.5.2"
+        "vue-axios": "^3.5.2",
+        "vue-router": "^3.6.5",
+        "vuetify": "^2.6.12"
     }
 }
